# Eight-Winds-Engine

./: .gitignore  BuildProjects.bat  CMakeLists.txt  README.md  RunThisForSetUpWINDOWS.bat  SetUpExamplesLinux.sh
examples/: CMakeLists.txt
examples/RockSample/: .gitignore  CMakeLists.txt  credits.md  imgui.ini  settings.json  tester
examples/RockSample/models/: eye_names.ewe  eye_simpleMesh.ewe  leaf_names.ewe  leaf_simpleNTMesh.ewe
examples/RockSample/shaders/: 2d.frag.spv  2d.vert.spv  2dGrid.frag.spv  2dGrid.vert.spv  InitialFrequencySpectrum.comp.spv  InitializeFoam.comp.spv  NineUI.frag.spv  NineUI.vert.spv  OceanFFT.comp.spv  RockTrack.comp.spv  TimeDependentSpectrum.comp.spv  UI.frag  UI.frag.slang  UI.frag.spv  UI.vert.slang  UI.vert.spv  billboard.frag.spv  billboard.vert.spv  bob_shader.frag.spv  bob_transparency.frag.spv  bone_NT.vert.spv  bone_Tangent.vert.spv  compile.bat  computeSpecularMap.comp.spv  grass.frag.spv  grass.mesh.spv  grass.task.spv  grassField.vert  grassField.vert.spv  grass_bob.mesh.spv  instanced_bone_NT.vert.spv  instanced_bone_Tangent.vert.spv  leaf.frag.spv  leaf.vert.spv  lightning.frag.spv  lightning.vert.spv  loading.frag.spv  loading.vert.spv  material_Tangent.vert.spv  material_bump.vert.spv  (+36 more)
examples/RockSample/shaders/debugging/: D_1.frag  D_9.frag
examples/RockSample/shaders/dynamic/: 1.frag.spv  9.frag.spv  loading.frag.spv  loading.vert.spv
examples/RockSample/shaders/glslShaders/: 2dGrid.frag  2dGrid.vert  SimplexNoise.glsl  billboard.frag  billboard.vert  compile.sh  grass.frag  grass.mesh  grass.task  grassField.vert  grass_bob.mesh  leaf.frag  leaf.vert  material_Tangent.vert  material_nn.vert  material_nn_instance.vert  material_tangent_instance.vert  perlin.frag  simple_terrain.frag  simple_terrain.vert  skybox.frag  skybox.vert  terrain.frag  terrain.tesc  terrain.tese  terrain.vert  testcompile.bat  textoverlay.vert  texture2D_array.vert  texture2D_singular.frag  texture_shader.vert  tileInstancing.frag  tileInstancing.vert
examples/RockSample/shaders/materials/: 0.frag.spv  256.geom.spv  320.geom.spv  64.frag.spv  72.frag.spv  82.frag.spv  8200.frag.spv  8201.frag.spv
examples/RockSample/shaders/materials/debugging/: D_0.frag  D_256.geom  D_320.geom  D_64.frag  D_72.frag  D_8192.frag  D_82.frag  D_8200.frag  D_8201.frag
examples/RockSample/shaders/slangShaders/: Bruneton_Functions.slang  Foam_Functions.slang  InitialFrequencySpectrum.comp.slang  OceanFFT.comp.slang  Ocean_Render_Inputs.h.slang  RockTrack.comp.slang  Texture2D_singular.vert.slang  TimeDependentSpectrum.comp.slang  UI.frag.slang  compileSlang.bat  computeSpecularMap.comp.slang  fragment_constants.h.slang  initializeFoam.comp.slang  ocean.frag.slang  ocean.vert.slang  oceanography.h.slang
examples/RockSample/shaders/slangShaders/SingleDispatch/: OceanSinglePass.comp.slang  oceanography.h.slang
examples/RockSample/shaders/slangShaders/cascades_as_zed_group/: InitialFrequencySpectrum.comp.slang  OceanFFT.comp.slang  TimeDependentSpectrum.comp.slang  oceanography.h.slang
examples/RockSample/src/: EWESample.cpp  EWESample.h  FloatingRockSystem.cpp  FloatingRockSystem.h  main.cpp
examples/RockSample/src/GUI/: MainMenuMM.cpp  MainMenuMM.h  MenuEnums.h  ShaderGenerationMM.cpp  ShaderGenerationMM.h
examples/RockSample/src/GUI/IMGUI/: LevelCreationIMGUI.cpp  LevelCreationIMGUI.h
examples/RockSample/src/Pipelines/: BackgroundPipe.cpp  BackgroundPipe.h  GeneratedGrassPipe.cpp  GeneratedGrassPipe.h  GridPipe.cpp  GridPipe.h  PerlinPipe.cpp  PerlinPipe.h  PipeEnum.h  PipelineEnum.h  PipelineHeaderWrapper.h  Simple_Terrain_Pipe.cpp  Simple_Terrain_Pipe.h  TerrainPipe.cpp  TerrainPipe.h  TerrainPipeWireMesh.cpp  TerrainPipeWireMesh.h
examples/RockSample/src/Scenes/: LevelCreationScene.cpp  LevelCreationScene.h  MainMenuScene.cpp  MainMenuScene.h  OceanScene.cpp  OceanScene.h  PBRScene.cpp  PBRScene.h  SceneEnum.h  ShaderGenerationScene.cpp  ShaderGenerationScene.h
examples/RockSample/src/Systems/: TMJReader.cpp  TMJReader.h  TileContainer.cpp  TileContainer.h  TileMap.cpp  TileMap.h  TileMapDevelopment.cpp  TileMapDevelopment.h  TileSet.cpp  TileSet.h
examples/RockSample/tilemaps/: tester.tmx  testerJSON.tmj
explicit_external/: WhyExplicit.txt
include/EWEngine/: Collision.h  EWE_GameObject.h  EWE_Model.h  EWE_Utils.h  EightWindsEngine.h  Free_Camera_Controller.h  GameObject2D.h  Global_Macros.h  MainWindow.h  ObjectManager.h  Scene.h  SettingsJson.h  SkeletonHandlerBase.h  SoundEngine.h  Sound_Engine.h  freeCameraController.h
include/EWEngine/Compute/: ComputeHandler.h  Compute_Texture.h  EWE_Compute_Texture.h
include/EWEngine/Data/: CommandCallbacks.h  EWEImport.h  EWE_Import.h  EWE_Memory.h  EWE_Utils.h  EngineDataTypes.h  FragmentShaderText.h  KeyValueContainer.h  Memory.h  MemoryTypeBucket.h  RingBuffer.cpp  RingBuffer.h  ShaderBuilder.h  ShaderText.h  TransformInclude.h  TransitionManager.h  VertexShaderText.h
include/EWEngine/GUI/: AudioMM.h  GraphicsMM.h  LevelBuilderMM.h  MenuEnums.h  MenuManager.h  MenuModule.h  Overlay.h  UICompFunctions.h  UIComponents.h  UIComponentsHigher.h  UIHandler.h
include/EWEngine/Graphics/: Camera.h  DebugNaming.h  DescriptorHandler.h  Descriptors.h  Device.hpp  Device_Buffer.h  EWE_Object.h  Frame_Info.h  LightBufferObject.h  Pipeline.h  PipelineBarrier.h  Preprocessor.h  PushConstants.h  Renderer.h  (+10 more)
src/: AssimpModel.cpp  AudioMM.cpp  Basic_Model.cpp  Camera.cpp  Cloth.cpp  Collision.cpp  CommandCallbacks.cpp  ComputeHandler.cpp  Compute_Texture.cpp  Cube_Texture.cpp  DebugNaming.cpp  DescriptorHandler.cpp  Descriptors.cpp  Device.cpp  Device_Buffer.cpp  Dimension2.cpp  ECSManager.cpp  EWEImport.cpp  EWE_Basic_Model.cpp  EWE_Buffer.cpp  EWE_Camera.cpp  EWE_Compute_Texture.cpp  EWE_Descriptors.cpp  EWE_Device.cpp  EWE_GameObject.cpp  EWE_Import.cpp  EWE_Memory.cpp  EWE_Model.cpp  EWE_Object.cpp  EWE_Pipeline.cpp  EWE_Renderer.cpp  EWE_SwapChain.cpp  EWE_Texture.cpp  EWE_Vertex.cpp  Edge.cpp  EightWindsEngine.cpp  EngineDataTypes.cpp  EweLevelLoader.cpp  Free_Camera_Controller.cpp  FunctionBase.cpp  (+97 more)
(+96 files in other folders)
